packages/bison-parser/conformance/parser.output
State 2 conflicts: 9 reduce/reduce
State 13 conflicts: 7 shift/reduce
State 14 conflicts: 7 shift/reduce
State 26 conflicts: 7 shift/reduce
State 27 conflicts: 7 shift/reduce
State 28 conflicts: 7 shift/reduce
State 29 conflicts: 7 shift/reduce
State 30 conflicts: 7 shift/reduce
State 31 conflicts: 7 shift/reduce
State 32 conflicts: 7 shift/reduce


Grammar

    0 $accept: unit "end of file"

    1 unit: expr.list

    2 expr.list: expr
    3          | expr.list ',' expr

    4 expr: "number"
    5     | ID
    6     | "string"
    7     | "number"
    8     | 'x'
    9     | 'c'
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '^' expr
   13     | expr "**" expr
   14     | expr EQ expr
   15     | expr '=' expr
   16     | expr NE expr
   17     | PREFIX expr
   18     | LOW expr
   19     | name.opt OLD_STYLE

   20 name.opt: %empty
   21         | "identifier"


Terminals, with rules where they appear

    "end of file" (0) 0
    '+' (43) 10
    ',' (44) 3
    '-' (45) 11
    '=' (61) 15
    '^' (94) 12
    'c' <sval> (99) 9
    'x' (120) 8
    error (256)
    "number" <ival> (258) 4 7
    "string" <ival> (259) 6
    EQ (300) 14
    ID <ival> (302) 5
    OLD_STYLE <ival> (303) 19
    "identifier" <sval> (304) 21
    "**" (305) 13
    NE (306) 16
    PREFIX (307) 17
    LOW <ival> (308) 18


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    unit <ival> (21)
        on left: 1
        on right: 0
    expr.list <ival> (22)
        on left: 2 3
        on right: 1 3
    expr <ival> (23)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2 3 10 11 12 13 14 15 16 17 18
    name.opt <sval> (24)
        on left: 20 21
        on right: 19


State 0

    0 $accept: . unit "end of file"

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    unit       go to state 9
    expr.list  go to state 10
    expr       go to state 11
    name.opt   go to state 12


State 1

    8 expr: 'x' .

    $default  reduce using rule 8 (expr)


State 2

    4 expr: "number" .
    7     | "number" .

    "end of file"  reduce using rule 4 (expr)
    "end of file"  [reduce using rule 7 (expr)]
    '+'            reduce using rule 4 (expr)
    '+'            [reduce using rule 7 (expr)]
    '-'            reduce using rule 4 (expr)
    '-'            [reduce using rule 7 (expr)]
    '^'            reduce using rule 4 (expr)
    '^'            [reduce using rule 7 (expr)]
    "**"           reduce using rule 4 (expr)
    "**"           [reduce using rule 7 (expr)]
    EQ             reduce using rule 4 (expr)
    EQ             [reduce using rule 7 (expr)]
    '='            reduce using rule 4 (expr)
    '='            [reduce using rule 7 (expr)]
    NE             reduce using rule 4 (expr)
    NE             [reduce using rule 7 (expr)]
    ','            reduce using rule 4 (expr)
    ','            [reduce using rule 7 (expr)]
    $default       reduce using rule 4 (expr)


State 3

    6 expr: "string" .

    $default  reduce using rule 6 (expr)


State 4

    5 expr: ID .

    $default  reduce using rule 5 (expr)


State 5

   21 name.opt: "identifier" .

    $default  reduce using rule 21 (name.opt)


State 6

    9 expr: 'c' .

    $default  reduce using rule 9 (expr)


State 7

   17 expr: PREFIX . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 13
    name.opt  go to state 12


State 8

   18 expr: LOW . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 14
    name.opt  go to state 12


State 9

    0 $accept: unit . "end of file"

    "end of file"  shift, and go to state 15


State 10

    1 unit: expr.list .
    3 expr.list: expr.list . ',' expr

    ','  shift, and go to state 16

    $default  reduce using rule 1 (unit)


State 11

    2 expr.list: expr .
   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    $default  reduce using rule 2 (expr.list)


State 12

   19 expr: name.opt . OLD_STYLE

    OLD_STYLE  shift, and go to state 24


State 13

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr
   17     | PREFIX expr .

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 17 (expr)]
    '-'       [reduce using rule 17 (expr)]
    '^'       [reduce using rule 17 (expr)]
    "**"      [reduce using rule 17 (expr)]
    EQ        [reduce using rule 17 (expr)]
    '='       [reduce using rule 17 (expr)]
    NE        [reduce using rule 17 (expr)]
    $default  reduce using rule 17 (expr)


State 14

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr
   18     | LOW expr .

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 18 (expr)]
    '-'       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 18 (expr)]
    "**"      [reduce using rule 18 (expr)]
    EQ        [reduce using rule 18 (expr)]
    '='       [reduce using rule 18 (expr)]
    NE        [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)


State 15

    0 $accept: unit "end of file" .

    $default  accept


State 16

    3 expr.list: expr.list ',' . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 25
    name.opt  go to state 12


State 17

   10 expr: expr '+' . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 26
    name.opt  go to state 12


State 18

   11 expr: expr '-' . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 27
    name.opt  go to state 12


State 19

   12 expr: expr '^' . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 28
    name.opt  go to state 12


State 20

   13 expr: expr "**" . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 29
    name.opt  go to state 12


State 21

   14 expr: expr EQ . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 30
    name.opt  go to state 12


State 22

   15 expr: expr '=' . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 31
    name.opt  go to state 12


State 23

   16 expr: expr NE . expr

    'x'           shift, and go to state 1
    "number"      shift, and go to state 2
    "string"      shift, and go to state 3
    ID            shift, and go to state 4
    "identifier"  shift, and go to state 5
    'c'           shift, and go to state 6
    PREFIX        shift, and go to state 7
    LOW           shift, and go to state 8

    $default  reduce using rule 20 (name.opt)

    expr      go to state 32
    name.opt  go to state 12


State 24

   19 expr: name.opt OLD_STYLE .

    $default  reduce using rule 19 (expr)


State 25

    3 expr.list: expr.list ',' expr .
   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    $default  reduce using rule 3 (expr.list)


State 26

   10 expr: expr . '+' expr
   10     | expr '+' expr .
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 10 (expr)]
    '-'       [reduce using rule 10 (expr)]
    '^'       [reduce using rule 10 (expr)]
    "**"      [reduce using rule 10 (expr)]
    EQ        [reduce using rule 10 (expr)]
    '='       [reduce using rule 10 (expr)]
    NE        [reduce using rule 10 (expr)]
    $default  reduce using rule 10 (expr)


State 27

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   11     | expr '-' expr .
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 11 (expr)]
    '-'       [reduce using rule 11 (expr)]
    '^'       [reduce using rule 11 (expr)]
    "**"      [reduce using rule 11 (expr)]
    EQ        [reduce using rule 11 (expr)]
    '='       [reduce using rule 11 (expr)]
    NE        [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


State 28

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   12     | expr '^' expr .
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 12 (expr)]
    '-'       [reduce using rule 12 (expr)]
    '^'       [reduce using rule 12 (expr)]
    "**"      [reduce using rule 12 (expr)]
    EQ        [reduce using rule 12 (expr)]
    '='       [reduce using rule 12 (expr)]
    NE        [reduce using rule 12 (expr)]
    $default  reduce using rule 12 (expr)


State 29

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   13     | expr "**" expr .
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 13 (expr)]
    '-'       [reduce using rule 13 (expr)]
    '^'       [reduce using rule 13 (expr)]
    "**"      [reduce using rule 13 (expr)]
    EQ        [reduce using rule 13 (expr)]
    '='       [reduce using rule 13 (expr)]
    NE        [reduce using rule 13 (expr)]
    $default  reduce using rule 13 (expr)


State 30

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   14     | expr EQ expr .
   15     | expr . '=' expr
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 14 (expr)]
    '-'       [reduce using rule 14 (expr)]
    '^'       [reduce using rule 14 (expr)]
    "**"      [reduce using rule 14 (expr)]
    EQ        [reduce using rule 14 (expr)]
    '='       [reduce using rule 14 (expr)]
    NE        [reduce using rule 14 (expr)]
    $default  reduce using rule 14 (expr)


State 31

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   15     | expr '=' expr .
   16     | expr . NE expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 15 (expr)]
    '-'       [reduce using rule 15 (expr)]
    '^'       [reduce using rule 15 (expr)]
    "**"      [reduce using rule 15 (expr)]
    EQ        [reduce using rule 15 (expr)]
    '='       [reduce using rule 15 (expr)]
    NE        [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


State 32

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '^' expr
   13     | expr . "**" expr
   14     | expr . EQ expr
   15     | expr . '=' expr
   16     | expr . NE expr
   16     | expr NE expr .

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '^'   shift, and go to state 19
    "**"  shift, and go to state 20
    EQ    shift, and go to state 21
    '='   shift, and go to state 22
    NE    shift, and go to state 23

    '+'       [reduce using rule 16 (expr)]
    '-'       [reduce using rule 16 (expr)]
    '^'       [reduce using rule 16 (expr)]
    "**"      [reduce using rule 16 (expr)]
    EQ        [reduce using rule 16 (expr)]
    '='       [reduce using rule 16 (expr)]
    NE        [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)
